--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,37 +1,40 @@
-name: Update readme # GitHub Actions 탭에서 확인할 수 있는 액션 이름
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-on: # jobs가 실행되어야 하는 상황 정의
+name: Python package
+
+on:
   push:
-    branches: [ "main" ] # main 브랜치에 push가 발생했을 때
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
-permissions:
-  contents: write
-
-jobs: # 실제 실행될 내용
+jobs:
   build:
-    runs-on: ubuntu-latest # 빌드 환경
+
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
+
     steps:
-    - uses: actions/checkout@v3 # checkout
-    - name: Set up Python 3.10 
-      uses: actions/setup-python@v3 # setup-python
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
-        python-version: "3.10" # 3.10버전 파이썬 사용
-    - name: Install dependencies # 1) 스크립트에 필요한 dependency 설치
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install python-leetcode 
-    - name: Run update.py # 2) update.py 실행
+        python -m pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
       run: |
-        python update.py
-    - name: Commit changes # 3) 추가된 파일 commit
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
       run: |
-        git config --global user.name 'Byesol' # 유저명
-        git config --global user.email 'bsj5967@naver.com' # 유저 이메일
-        git add -A
-        git commit -am "auto update README.md" # 커밋 메시지
-    - name: Push changes # 4) 메인에 푸시
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git push
+        pytest
